# offchain-gmm-clamm

./: Anchor.toml  package-lock.json  package.json
programs/clamm/: Cargo.toml
programs/clamm/src/: errors.rs  lib.rs
programs/clamm/src/instructions/: add_liquidity.rs  initialize_config.rs  initialize_pool.rs  initialize_tick_array.rs  mod.rs  open_position.rs  swap.rs
programs/clamm/src/manager/: liquidity_manager.rs  mod.rs  pool_manager.rs  position_manager.rs  swap_manager.rs  tick_manager.rs
programs/clamm/src/state/: config.rs  mod.rs  pool.rs  position.rs  tick.rs
programs/clamm/src/util/: swap_utils.rs  token.rs
tests/: clamm.ts  pdaUtils.ts  price-math.ts  tick-math.ts  tokenUtils.ts
